--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@gasbuddy/express-promise-patch",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "A monkey patch to express 4 to better handle promises in handlers (i.e. async methods)",
   "main": "index.js",
   "scripts": {
@@ -18,10 +18,6 @@
     "express": "^4.14.0"
   },
   "devDependencies": {
-    "eslint": "^3.10.2",
-    "eslint-config-airbnb": "^13.0.0",
-    "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jsx-a11y": "^2.2.3",
-    "eslint-plugin-react": "^6.7.1"
+    "eslint-config-gasbuddy": "^5.0.2"
   }
 }
